--- a/public/theme.css
+++ b/public/theme.css
@@ -113,26 +113,26 @@
 	--theme-dim-light: hsla(var(--color-gray-80), 1);
 	--theme-dim-lighter: hsla(var(--color-gray-90), 1);
 	--theme-accent-opacity: 0.1;
-	--theme-divider: hsla(var(--color-purple), 0.1);
-	--theme-shade-subtle: hsla(var(--color-purple), 0.3);
-	--theme-text: hsla(var(--color-gray-10), 1);
+	--theme-divider: hsla(var(--color-blue), 0.1);
+	--theme-shade-subtle: hsla(var(--color-blue), 0.3);
+	--theme-text: hsla(var(--color-gray-10), .9);
 	--theme-text-light: hsla(var(--color-gray-30), 1);
 	--theme-text-lighter: hsla(var(--color-gray-40), 1);
-	--theme-bg: hsl(273, 37%, 93%);
+	--theme-bg: hsl(198, 37%, 93%);
 	--theme-bg-gradient-top: var(--theme-bg);
 	--theme-bg-gradient-bottom: #fdfeff;
-	--theme-bg-hover: hsla(var(--color-purple), 0.075);
-	--theme-bg-offset: hsla(var(--color-purple), 0.1);
-	--theme-bg-accent: hsla(var(--color-purple), var(--theme-accent-opacity));
-	--theme-code-inline-bg: hsla(var(--color-purple), 0.1);
+	--theme-bg-hover: hsla(var(--color-blue), 0.075);
+	--theme-bg-offset: hsla(var(--color-blue), 0.1);
+	--theme-bg-accent: hsla(var(--color-blue), var(--theme-accent-opacity));
+	--theme-code-inline-bg: hsla(var(--color-blue), 0.1);
 	--theme-code-inline-text: var(--theme-text);
-	--theme-code-bg: hsla(257, 31%, 22%, 1);
-	--theme-code-tabs: hsla(257, 38%, 32%, 1);
+	--theme-code-bg: rgb(39, 69, 73);
+	--theme-code-tabs: rgb(51, 100, 113);
 	--theme-code-text: hsla(var(--color-gray-95), 1);
 	--theme-navbar-bg: var(--theme-bg);
-	--theme-selection-color: hsla(var(--color-purple), 1);
-	--theme-selection-bg: hsla(var(--color-purple), var(--theme-accent-opacity));
-	--theme-code-selection-bg: hsla(var(--color-purple), 0.4);
+	--theme-selection-color: hsla(var(--color-blue), 1);
+	--theme-selection-bg: hsla(var(--color-blue), var(--theme-accent-opacity));
+	--theme-code-selection-bg: hsla(var(--color-blue), 0.4);
 	--theme-code-mark-bg: hsl(226, 50%, 33%);
 	--theme-code-mark-border: hsl(224, 50%, 54%);
 	--theme-code-ins-bg: hsl(122, 22%, 23%);
@@ -150,7 +150,7 @@
 	);
 
 	--theme-glow-highlight: transparent;
-	--theme-glow-diffuse: hsla(var(--color-base-purple), 65%, 0.5);
+	--theme-glow-diffuse: hsla(var(--color-base-blue), 65%, 0.5);
 	--theme-glow-blur: 10px;
 }
 
@@ -170,10 +170,10 @@
 	--theme-text: hsla(var(--color-gray-90), 1);
 	--theme-text-light: hsla(var(--color-gray-80), 1);
 	--theme-text-lighter: hsla(var(--color-gray-70), 1);
-	--theme-bg: hsl(256, 27%, 19%);
+	--theme-bg: hsl(203, 32%, 26%);
 	--theme-bg-gradient-top: var(--theme-bg);
 	--theme-bg-gradient-bottom: hsl(251, 29%, 11%);
-	--theme-bg-hover: hsla(var(--color-purple), 0.2);
+	--theme-bg-hover: hsla(var(--color-blue), 0.2);
 	--theme-bg-offset: #0008;
 	--theme-code-inline-bg: #ffffff16;
 	--theme-code-inline-text: var(--theme-text-light);
@@ -191,8 +191,8 @@
 	--theme-code-del-border: hsl(340, 34%, 43%);
 	--theme-code-del-text: hsl(340, 24%, 65%);
 
-	--theme-glow-highlight: hsla(var(--color-base-purple), 50%, 1);
-	--theme-glow-diffuse: hsla(var(--color-base-purple), 35%, 0.4);
+	--theme-glow-highlight: hsla(var(--color-base-blue), 50%, 1);
+	--theme-glow-diffuse: hsla(var(--color-base-blue), 35%, 0.4);
 }
 
 ::selection {
