--- a/public/theme.css
+++ b/public/theme.css
@@ -5,7 +5,7 @@
 	--theme-navbar-height: 6rem;
 	--theme-mobile-toc-height: 4rem;
 	--theme-left-sidebar-width: 18rem;
-	--theme-right-sidebar-width: 18rem;
+	/* --theme-right-sidebar-width: 24rem; */
 	/*
 		Minimum visual horizontal spacing from the edges of the viewport,
 		and between vertically arranged elements
