--- a/src/layouts/TutorialLayout.astro
+++ b/src/layouts/TutorialLayout.astro
@@ -6,6 +6,7 @@ import { getLanguageFromURL } from '../util';
 import { getPreviousAndNext } from '../util/getNavLinks';
 import { getTutorialPages, getTutorialUnits } from '../util/getTutorialPages';
 import BaseLayout from './BaseLayout.astro';
+import TutorialNav from '../../src/components/tutorial/TutorialNav.astro';
 
 const currentUrl = Astro.url.pathname.replace(/\/$/, '');
 const lang = getLanguageFromURL(Astro.url.pathname);
@@ -25,6 +26,7 @@ const { next } = getPreviousAndNext(
 <BaseLayout {...Astro.props}>
 	<RightSidebar slot="secondary-sidebar" />
 	<PageContent content={Astro.props.content} {...{ next }}>
+		<TutorialNav id="sidebar" />
 		<MobileTutorialNav slot="before-article" />
 		<p class="unit" slot="before-title">
 			{currentUnitIndex} • {currentUnit.title}
