Test - moved Feedback button to global header, updated size and text

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -6,6 +6,7 @@ import Search from './Search.astro';
 import ThemeToggleButton from './ThemeToggleButton';
 import { getLanguageFromURL } from '../../util';
 import { getDocSearchStrings, useTranslations } from '../../i18n/util';
+import FeedbackButton from '../../components/tutorial/FeedbackButton.astro';
 
 const { currentPage } = Astro.props;
 const lang = currentPage && getLanguageFromURL(currentPage);
@@ -30,6 +31,10 @@ const t = useTranslations(Astro);
 						<svg style="height: 20px; margin-top: 6px" id="Layer_1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 370.48 61.56"><defs><style>.cls-1{fill:#00dfc3;}.cls-2{fill:#007b98;}</style></defs><g><path class="cls-2" d="m68.19,14.45h-15.28V4.01h42.35v10.44h-15.28v43.11h-11.8V14.45Z"/><path class="cls-2" d="m96.48,30.78c0-4.28.72-8.17,2.16-11.65,1.44-3.48,3.44-6.44,6.01-8.89,2.57-2.45,5.62-4.32,9.15-5.63,3.53-1.31,7.39-1.97,11.57-1.97s8.04.66,11.57,1.97c3.53,1.31,6.58,3.19,9.15,5.63,2.57,2.45,4.58,5.41,6.01,8.89,1.44,3.48,2.16,7.36,2.16,11.65s-.72,8.17-2.16,11.65c-1.44,3.48-3.44,6.44-6.01,8.89-2.57,2.45-5.62,4.32-9.15,5.63-3.53,1.31-7.39,1.97-11.57,1.97s-8.04-.66-11.57-1.97c-3.53-1.31-6.58-3.19-9.15-5.63-2.57-2.45-4.58-5.41-6.01-8.89-1.44-3.48-2.16-7.36-2.16-11.65Zm12.25,0c0,2.52.39,4.83,1.17,6.92.78,2.09,1.9,3.91,3.37,5.45,1.46,1.54,3.21,2.74,5.26,3.59,2.04.86,4.32,1.29,6.84,1.29s4.8-.43,6.84-1.29c2.04-.86,3.79-2.05,5.26-3.59,1.46-1.54,2.58-3.35,3.37-5.45.78-2.09,1.17-4.4,1.17-6.92s-.39-4.76-1.17-6.88c-.78-2.12-1.9-3.94-3.37-5.48-1.46-1.54-3.21-2.73-5.26-3.59-2.04-.86-4.32-1.29-6.84-1.29s-4.8.43-6.84,1.29c-2.04.86-3.79,2.06-5.26,3.59-1.46,1.54-2.58,3.37-3.37,5.48-.78,2.12-1.17,4.41-1.17,6.88Z"/><path class="cls-2" d="m157.21,30.78c0-4.28.72-8.17,2.16-11.65,1.44-3.48,3.44-6.44,6.01-8.89,2.57-2.45,5.62-4.32,9.15-5.63,3.53-1.31,7.39-1.97,11.57-1.97s8.04.66,11.57,1.97c3.53,1.31,6.58,3.19,9.15,5.63,2.57,2.45,4.58,5.41,6.01,8.89,1.44,3.48,2.16,7.36,2.16,11.65s-.72,8.17-2.16,11.65c-1.44,3.48-3.44,6.44-6.01,8.89-2.57,2.45-5.62,4.32-9.15,5.63-3.53,1.31-7.39,1.97-11.57,1.97s-8.04-.66-11.57-1.97c-3.53-1.31-6.58-3.19-9.15-5.63-2.57-2.45-4.58-5.41-6.01-8.89-1.44-3.48-2.16-7.36-2.16-11.65Zm12.25,0c0,2.52.39,4.83,1.17,6.92.78,2.09,1.9,3.91,3.37,5.45,1.46,1.54,3.21,2.74,5.26,3.59,2.04.86,4.32,1.29,6.84,1.29s4.8-.43,6.84-1.29c2.04-.86,3.79-2.05,5.26-3.59,1.46-1.54,2.58-3.35,3.37-5.45.78-2.09,1.17-4.4,1.17-6.92s-.39-4.76-1.17-6.88c-.78-2.12-1.9-3.94-3.37-5.48-1.46-1.54-3.21-2.73-5.26-3.59-2.04-.86-4.32-1.29-6.84-1.29s-4.8.43-6.84,1.29c-2.04.86-3.79,2.06-5.26,3.59-1.46,1.54-2.58,3.37-3.37,5.48-.78,2.12-1.17,4.41-1.17,6.88Z"/><path class="cls-2" d="m221.57,4.01h11.8v42.66h21.86v10.89h-33.66V4.01Z"/><path class="cls-2" d="m260.29,4.01h11.8v22.24l20.8-22.24h15.43l-23.82,24.88,25.87,28.66h-16.49l-21.78-25.41v25.41h-11.8V4.01Z"/><path class="cls-2" d="m312.4,4.01h11.8v53.55h-11.8V4.01Z"/><path class="cls-2" d="m343.41,14.45h-15.28V4.01h42.35v10.44h-15.28v43.11h-11.8V14.45Z"/></g><path class="cls-1" d="m22.61,0l8.62,2.65L8.55,61.56l-8.55-2.65L22.61,0Z"/></svg>					</a>
 				</li>
 			</ul>
+		</div>
+		
+		<div class="feedback">
+			<FeedbackButton />
 		</div>
 		<ThemeToggleButton
 			client:visible
