--- a/src/components/tutorial/FeedbackButton.astro
+++ b/src/components/tutorial/FeedbackButton.astro
@@ -23,6 +23,7 @@ const currentUrl = Astro.url.pathname.replace(/\/$/, '');
 	button {
 		border: 1px solid var(--theme-shade-subtle);
 		border-radius: 0.5rem;
+		padding: 0.7rem 3rem;
 		background-color: transparent;
 		cursor: pointer;
 		font-size: var(--theme-text-xs);
