fix to css  -- applied a global style which was effecting aside tip boxes

--- a/src/components/PageContent/PageContent.astro
+++ b/src/components/PageContent/PageContent.astro
@@ -66,10 +66,8 @@ const direction = rtlLanguages.has(lang) ? 'rtl' : 'ltr';
 	</article>
 </div>
 
-<style lang="scss" is:global>
-	.DocSearch-Logo {
-		display: none;
-	}
+<style lang="scss">
+	
 	.block-wrapper {
 		.block {
 		background-color: var(--theme-code-inline-bg);
@@ -132,7 +130,7 @@ const direction = rtlLanguages.has(lang) ? 'rtl' : 'ltr';
 		display: flex;
 		flex-direction: column;
 		overflow-x: hidden;
-	}
+	} 
 	.content > section {
 		margin-bottom: 4rem;
 	}
