--- a/src/components/LeftSidebar/SidebarContent.astro
+++ b/src/components/LeftSidebar/SidebarContent.astro
@@ -47,7 +47,7 @@ const lang = getLanguageFromURL(Astro.url.pathname);
 								aria-current={`${currentPageMatch.endsWith(slug) ? 'page' : 'false'}`}
 								data-current-parent={`${isSubPage(currentPageMatch, slug) ? 'true' : 'false'}`}
 							>
-								<Fragment set:html={text} /> {isFallback && <sup class="fallback">EN</sup>}
+								<Fragment set:html={text} /> <!-- {isFallback && <sup class="fallback">EN</sup>} -->
 							</a>
 						</li>
 					))}
