Slight changes to styles -height -accents and css around header and tab area

--- a/src/components/TabGroup/TabGroup.css
+++ b/src/components/TabGroup/TabGroup.css
@@ -10,10 +10,10 @@
 	white-space: nowrap;
 	border-radius: 0;
 	cursor: pointer;
-	padding: 0.6rem 1rem;
+	padding: 1rem 1rem 0.8rem;
 	color: var(--theme-text-light);
-	border-bottom: 4px solid transparent;
-	margin-bottom: -4px;
+	border-bottom: 6px solid transparent;
+	margin-bottom: -6px;
 	background-color: transparent;
 	text-decoration: none;
 }
