--- a/public/theme.css
+++ b/public/theme.css
@@ -2,7 +2,7 @@
 	Define common sizes and spacings
 */
 :root {
-	--theme-navbar-height: 6rem;
+	--theme-navbar-height: 7rem;
 	--theme-mobile-toc-height: 4rem;
 	--theme-left-sidebar-width: 18rem;
 	--theme-right-sidebar-width: 18rem;
@@ -74,7 +74,7 @@
 	--color-base-blue: 212, 100%;
 	--color-base-blue-dark: 191, 72%;
 	--color-base-teal: 172, 80%;
-	--color-base-green: 158, 79%;
+	--color-base-green: 154, 42%;
 	--color-base-orange: 22, 100%;
 	--color-base-purple: 269, 79%;
 	--color-base-red: 351, 100%;
@@ -110,7 +110,7 @@
 :root,
 ::backdrop {
 	color-scheme: light;
-	--theme-accent: hsla(var(--color-blue), 1);
+	--theme-accent: hsla(var(--color-green), 1);
 	--theme-accent-secondary: hsla(var(--color-blue-dark), 1);
 	--theme-dim: hsla(var(--color-gray-70), 1);
 	--theme-dim-light: hsla(var(--color-gray-80), 1);
@@ -121,7 +121,7 @@
 	--theme-text: hsla(var(--color-gray-10), 1);
 	--theme-text-light: hsla(var(--color-gray-30), 1);
 	--theme-text-lighter: hsla(var(--color-gray-40), 1);
-	--theme-bg:  hsla(var(--color-blue),0.075);
+	--theme-bg:  hsl(198, 37%, 93%);
 	--theme-bg-gradient-top: var(--theme-bg);
 	--theme-bg-gradient-bottom: #fdfeff;
 	--theme-bg-hover: hsla(var(--color-purple), 0.075);
