--- a/src/components/PageContent/PageContent.astro
+++ b/src/components/PageContent/PageContent.astro
@@ -102,7 +102,8 @@ const direction = rtlLanguages.has(lang) ? 'rtl' : 'ltr';
 		padding-inline: var(--min-spacing-inline);
 		width: 100%;
 		height: 100%;
-		max-width: 100ch;
+		/* max-width: 100ch; */
+		max-width: 90%;
 		margin-inline: auto;
 		display: flex;
 		flex-direction: column;
