--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -8,6 +8,7 @@ export let href; // optional href prop
 <a 
   class={`button ${Astro.props.variant}`} 
   href={Astro.props.href}
+  data-tag={Astro.props['data-tag']}
   {...(Astro.props.href && Astro.props.href.startsWith('http') ? { target: '_blank', rel: 'noopener noreferrer' } : {})}
 >
   <slot></slot>
@@ -34,6 +35,10 @@ export let href; // optional href prop
     text-decoration: none;
 	  font-weight: 500;
 	  transition: all 200ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  }
+  .button.small {
+    padding: 12px 28px;
+    
   }
   .button:hover {
     text-decoration: none;
@@ -79,7 +84,7 @@ export let href; // optional href prop
     color: var(--theme-accent-secondary);
     background-color: transparent;
   }
-  .outline:hover,.outline:focus {
+  .outline:hover,.outline:focus, .button.outline.active {
     background-color:var(--theme-accent-secondary);
 	color: #fff;
   }
