--- a/src/components/LeftSidebar/SidebarContent.astro
+++ b/src/components/LeftSidebar/SidebarContent.astro
@@ -83,9 +83,27 @@ const lang = getLanguageFromURL(Astro.url.pathname);
 	.nav-group-title {
 		font-size: 1em;
 		font-weight: 600;
-		padding: 0.3rem 2rem;
+		// padding: 0.3rem 2rem; 
+		// padding: 0.6rem 2rem 0.3rem; 
 	}
-
+	summary {
+		&.nav-group-title {
+			position: relative;
+			margin: 0.3rem 0;
+			&:before {
+				content:'';
+				display: block;
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				left: 0px;
+				top: 0px;
+				border-top-left-radius: 15px;
+				border-bottom-left-radius: 15px;
+				background-color: var(--theme-bg-accent);
+			}
+		}
+	}
 	.nav-link a {
 		margin: 1px;
 		padding: 0.3rem 2rem;
@@ -96,13 +114,14 @@ const lang = getLanguageFromURL(Astro.url.pathname);
 
 		&:hover,
 		&:focus {
-			background-color: var(--theme-bg-hover);
+			// background-color: var(--theme-bg-hover);
+			font-weight: 500;
 		}
 
 		&[aria-current='page'],
 		&[data-current-parent='true'] {
 			color: var(--theme-text);
-			background-color: var(--theme-bg-accent);
+			// background-color: var(--theme-bg-accent);
 			font-weight: 500;
 			/* Indicates the current page for forced colors users in older browsers */
 			outline: 1px solid transparent;
