fixed padding and mobile appearance

--- a/src/components/LeftSidebar/SidebarContent.astro
+++ b/src/components/LeftSidebar/SidebarContent.astro
@@ -83,7 +83,7 @@ const lang = getLanguageFromURL(Astro.url.pathname);
 	.nav-group-title {
 		font-size: 1em;
 		font-weight: 600;
-		// padding: 0.3rem 2rem; 
+		padding: 0.3rem 2rem; 
 		// padding: 0.6rem 2rem 0.3rem; 
 	}
 	summary {
@@ -100,6 +100,12 @@ const lang = getLanguageFromURL(Astro.url.pathname);
 				top: 0px;
 				border-top-left-radius: 15px;
 				border-bottom-left-radius: 15px;
+				border-top-right-radius: 15px;
+				border-bottom-right-radius: 15px;
+				@media (min-width: 50em) {
+					border-top-right-radius: 0px;
+					border-bottom-right-radius: 0px;
+				}
 				background-color: var(--theme-bg-accent);
 			}
 		}
