--- a/src/components/LeftSidebar/SidebarContent.astro
+++ b/src/components/LeftSidebar/SidebarContent.astro
@@ -84,6 +84,12 @@ const lang = getLanguageFromURL(Astro.url.pathname);
 		font-size: 1em;
 		font-weight: 600;
 		padding: 0.3rem 2rem;
+		background-color: var(--custom-dark-blue);
+		border-radius: 1em 0 0 1em;
+		h2{
+			background: none;
+			color: var(--custom-white)
+		}
 	}
 
 	.nav-link a {
@@ -93,16 +99,22 @@ const lang = getLanguageFromURL(Astro.url.pathname);
 		color: var(--theme-text-lighter);
 		text-decoration: none;
 		display: block;
+		$indent: 0em;
+		width: calc(100% - #{$indent});
+		position: relative;
+		left: $indent;
+		border-radius: 1em 0 0 1em;
 
 		&:hover,
 		&:focus {
-			background-color: var(--theme-bg-hover);
+			background-color: var(--custom-teal-25);
 		}
 
 		&[aria-current='page'],
 		&[data-current-parent='true'] {
 			color: var(--theme-text);
-			background-color: var(--theme-bg-accent);
+			background-color: var(--custom-teal-25);
+			
 			font-weight: 500;
 			/* Indicates the current page for forced colors users in older browsers */
 			outline: 1px solid transparent;
