--- a/src/components/HeadCommon.astro
+++ b/src/components/HeadCommon.astro
@@ -13,9 +13,9 @@ import '@fontsource/ibm-plex-mono/400-italic.css';
 <link rel="sitemap" href="/sitemap-index.xml" />
 
 <!-- Global CSS -->
+<link rel="stylesheet" href="/custom-theme.css" />
 <link rel="stylesheet" href="/theme.css" />
 <link rel="stylesheet" href="/index.css" />
-<link rel="stylesheet" href="/custom.css" />
 
 <!-- Scrollable a11y code helper -->
 <script type="module" src="/make-scrollable-code-focusable.js"></script>
