--- a/src/components/LeftSidebar/LeftSidebar.astro
+++ b/src/components/LeftSidebar/LeftSidebar.astro
@@ -103,12 +103,15 @@ if (isReference) {
 		width: 100%;
 		height: 100%;
 		font-size: var(--theme-text-sm);
+
 	}
 	.nav-groups {
 		padding-top: 1rem;
+		padding-left: 1rem;
 		max-height: 100%;
-		overflow-x: visible;
+		overflow-x: hidden;
 		overflow-y: auto;
+		background-color:#80808020;
 	}
 
 	@media (min-width: 50em) {
