--- a/public/theme.css
+++ b/public/theme.css
@@ -111,7 +111,7 @@
 ::backdrop {
 	color-scheme: light;
 	--theme-accent: var(--custom-dark-blue);
-	--theme-accent-secondary: hsla(var(--color-blue-dark), 1);
+	--theme-accent-secondary: hsla(var(--color-green), 1);
 	--theme-dim: hsla(var(--color-gray-70), 1);
 	--theme-dim-light: hsla(var(--color-gray-80), 1);
 	--theme-dim-lighter: hsla(var(--color-gray-90), 1);
