Right sidebar page nav styled - desktop

--- a/public/custom-theme.css
+++ b/public/custom-theme.css
@@ -1,22 +1,50 @@
 :root {
-	--custom-black: #17161D;
-	--custom-white: #fdfeff;
-	--custom-teal: #00DFC3;
-	--custom-dark-blue: #054C62;
-	--custom-green: #81C051;
+	/* =============================== */
+	/* ===== PRIMARY THEME COLORS ===== */
+	/* =============================== */
+	--custom-black: 			#17161D;
+	--custom-white: 			#fdfeff;
+	--custom-teal: 				#00DFC3;
+	--custom-dark-blue: 	#054C62;
+	--custom-green: 			#81C051;
 
-	/*shade variants - */
-	/* ========================= */
 	/* ===== SHADE VARIANTS ===== */
-	/* ========================= */
 	/*add opacity percent as last 2 digits*/
-	/*50% opacity*/
-	--custom-teal-50: #00DFC350;
-	--custom-dark-blue-50: #054C6250;
-	--custom-green-50: #81C05150;
+		/*50% opacity*/
+		--custom-teal-50: 				#00DFC350;
+		--custom-dark-blue-50: 	#054C6250;
+		--custom-green-50: 				#81C05150;
 
-	/*25% opacity*/
-	--custom-teal-25: #00DFC325;
-	--custom-dark-blue-25: #054C6225;
-	--custom-green-25: #81C05125;
+		/*25% opacity*/
+		--custom-teal-25: 				#00DFC325;
+		--custom-dark-blue-25: 	#054C6225;
+		--custom-green-25: 				#81C05125;
+
+		/*10% opacity*/
+		--custom-teal-10: 				#00DFC310;
+		--custom-dark-blue-10: 	#054C6210;
+		--custom-green-10: 				#81C05110;
+
+	/* ================ */
+	/* ===== GREYS ===== */
+	/* ================ */
+		--custom-grey-1: 			#808080;
+		--custom-grey-1-50: 	#80808050;
+		--custom-grey-1-20: 	#80808020;
+		--custom-grey-1-10: 	#80808010;
+
+
+	/* ======================== */
+	/* ===== NAMED COLORS ===== */
+	/* ======================== */
+		--custom-accent-1: 	var(--custom-dark-blue);
+		--custom-accent-1-50: 	var(--custom-dark-blue-50);
+		--custom-accent-1-25: 	var(--custom-dark-blue-25);
+		--custom-accent-1-10: 	var(--custom-dark-blue-10);
+
+		--custom-accent-2: 	var(--custom-teal);
+		--custom-accent-2-50: 	var(--custom-teal-50);
+		--custom-accent-2-25: 	var(--custom-teal-25);
+		--custom-accent-2-10: 	var(--custom-teal-10);
 }
+
