--- a/public/index.css
+++ b/public/index.css
@@ -492,8 +492,8 @@ a.header-link {
 	gap: 0.5em;
 	width: 100%;
 	font: inherit;
-	padding-top: 0.4rem;
-	padding-bottom: 0.4rem;
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
 	line-height: 1.3;
 	color: var(--theme-text-lighter);
 	text-decoration: none;
@@ -502,15 +502,15 @@ a.header-link {
 
 @media (min-width: 50em) {
 	a.header-link {
-		padding-top: 0.275rem;
-		padding-bottom: 0.275rem;
+		padding-top: 0.65rem;
+		padding-bottom: 0.65rem;
 	}
 }
 
 .header-link:hover,
 .header-link:focus,
 .header-link:focus-within {
-	border-inline-start-color: var(--theme-accent-secondary);
+	border-inline-start-color: var(--custom-accent-1-10);
 }
 
 a.header-link:hover,
@@ -543,13 +543,14 @@ a.header-link:focus {
 	}
 
 	.header-link {
-		border-inline-start: 4px solid var(--theme-divider);
+		border-inline-start: 0.5rem solid var(--custom-accent-1-10);
 	}
 }
 
 /* Highlight TOC header link matching the current scroll position */
 a.current-header-link {
-	background-color: var(--theme-bg-accent);
+	background-color: var(--custom-accent-2-10);
+	border-inline-start: 0.5rem solid var(--custom-accent-1-50);
 	/* Indicates the current heading for forced colors users in older browsers */
 	outline: 1px solid transparent;
 }
