--- a/src/components/LeftSidebar/LeftSidebar.astro
+++ b/src/components/LeftSidebar/LeftSidebar.astro
@@ -111,7 +111,7 @@ if (isReference) {
 		max-height: 100%;
 		overflow-x: hidden;
 		overflow-y: auto;
-		background-color:#80808020;
+		background-color:var(--custom-grey-1-20);
 	}
 
 	@media (min-width: 50em) {
