--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -4,6 +4,7 @@ import SidebarToggle from './SidebarToggle';
 import LanguageSelect from './LanguageSelect';
 import Search from './Search.astro';
 import ThemeToggleButton from './ThemeToggleButton';
+import FeedbackButton from './FeedbackButton.astro';
 import { getLanguageFromURL } from '../../util';
 import { getDocSearchStrings, useTranslations } from '../../i18n/util';
 
@@ -61,6 +62,10 @@ const t = useTranslations(Astro);
 			</ul>
 		</div>
 
+		{import.meta.env.PUBLIC_FEATURE_FEEDBACK=="true" &&
+			<FeedbackButton/>
+		}
+
 		{import.meta.env.PUBLIC_FEATURE_DARKMODE=="true" &&
 			<ThemeToggleButton
 				client:visible
@@ -68,8 +73,6 @@ const t = useTranslations(Astro);
 				isInsideHeader={true}
 			/>
 		}
-
-		
 		
 		{import.meta.env.PUBLIC_FEATURE_SEARCH=="true" &&
 			<Search {lang} labels={docsearchStrings} />
