--- a/src/components/RightSidebar/RightSidebar.astro
+++ b/src/components/RightSidebar/RightSidebar.astro
@@ -25,9 +25,9 @@ const overview = t('rightSidebar.overview');
 	}
 	<!-- <ContributeMenu i18nReady={content.i18nReady} editHref={githubEditUrl} />
 	<CommunityMenu /> -->
-	<div class="feedback-section">
+	<!-- <div class="feedback-section">
 		<FeedbackButton />
-	</div>
+	</div> -->
 </nav>
 
 <style>
