updated feedback tool to use env variable for key

--- a/src/components/Header/FeedbackButton.astro
+++ b/src/components/Header/FeedbackButton.astro
@@ -187,7 +187,7 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 						method: 'POST',
 						headers: { 'Content-Type': 'application/json' },
 						body: JSON.stringify({
-							projectId: '1b24b5d16c81bd',
+							projectId: import.meta.env.PUBLIC_FEEDBACK_KEY,
 							text: form.text.value,
 							category: form.category.value,
 							metadata: { url: location.pathname.replace(/\/$/, '') },
