--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -40,7 +40,7 @@ if (isFallback) canonicalURL.pathname = canonicalURL.pathname.replace(`/${lang}/
 	<head>
 		<HeadCommon />
 		<HeadSEO content={content} canonicalURL={canonicalURL} />
-		<HeadAnalytics gtmKey=import.meta.env.PUBLIC_KEY_GTM />
+		<HeadAnalytics/>
 		<title set:html={formatTitle(content)} />
 		<style>
 			.sidebar {
