--- a/src/components/PageContent/PageContent.astro
+++ b/src/components/PageContent/PageContent.astro
@@ -138,7 +138,7 @@ const direction = rtlLanguages.has(lang) ? 'rtl' : 'ltr';
 		width: 100%;
 		height: 100%;
 		/* max-width: 100ch; */
-		max-width: 90%;
+		/* max-width: 90%; */
 		margin-inline: auto;
 		display: flex;
 		flex-direction: column;
