updates to width of cards and gap

--- a/src/components/LeftSidebar/SidebarContent.astro
+++ b/src/components/LeftSidebar/SidebarContent.astro
@@ -120,7 +120,7 @@ const lang = getLanguageFromURL(Astro.url.pathname);
 			outline: 1px solid transparent;
 
 			&:focus {
-				outline: 2px solid;
+				// outline: 2px solid;
 			}
 		}
 
