updates to getting started pages and directory page cards to bring in closer, updated page titles on a couple pages

--- a/src/components/ResourceCard.astro
+++ b/src/components/ResourceCard.astro
@@ -15,14 +15,21 @@ import { Icon } from 'astro-icon'
       <span class="tag">{tag}</span>
     ))}
   </div>
-  <Button variant="primary" className="details-btn" href={Astro.props.resourceDetailsLink}>
-    {Astro.props.viewDetailsButtonText}
-  </Button>
-  <Button variant="tertiary" className="share-btn" href={`mailto:?subject=CORE%20RMS%20Resource&body=${encodeURIComponent(Astro.props.resourceDetailsLink)}`}>
-    {Astro.props.shareButtonText}
-  </Button>
+  <div class="button-wrap">
+    <Button variant="primary" className="details-btn" href={Astro.props.resourceDetailsLink}>
+      {Astro.props.viewDetailsButtonText}
+    </Button>
+    <Button variant="tertiary" className="share-btn" href={`mailto:?subject=CORE%20RMS%20Resource&body=${encodeURIComponent(Astro.props.resourceDetailsLink)}`}>
+      {Astro.props.shareButtonText}
+    </Button>
+  </div>
 </div>
 <style is:global>
+  .button-wrap {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
   .resource-card-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr); /* change 3 to the number of columns you want by default */
@@ -97,7 +104,7 @@ import { Icon } from 'astro-icon'
       box-sizing: border-box;
       /* margin: 0rem 2% 2% 0rem; */
       /* max-width: 31%; */
-      padding: 1.5rem;
+      padding: 1.15rem;
       border-radius: 12px;
       border: 1px solid var(--theme-dim);
       box-shadow: -2px 2px 0px var(--theme-dim-light);
