--- a/src/components/LeftSidebar/LeftSidebar.astro
+++ b/src/components/LeftSidebar/LeftSidebar.astro
@@ -111,6 +111,7 @@ if (isReference) {
 		max-height: 100%;
 		overflow-x: hidden;
 		overflow-y: auto;
+		background-image: linear-gradient(to bottom, var(--custom-accent-2-05), var(--theme-bg-gradient-bottom) );
 		background-color:var(--custom-grey-1-20);
 	}
 
